# ud-ad

./: .gitignore  CLAUDE.md  NEXT_ACTION.md  PROJECT_CONFIG.md  README.md  package-lock.json  package.json
src/: proxy.ts
src/app/: globals.css  layout.tsx
src/types/: index.ts
supabase/: config.toml
supabase/migrations/: 20260324032301_initial_schema.sql  20260324041106_agency_applications.sql
template-1.1/: .cc-rules.md  CLAUDE.md  QUICK_START.md  README.md  package.json
template-1.1/.github/: PULL_REQUEST_TEMPLATE.md
template-1.1/.husky/: pre-commit
template-1.1/claude-rules/: base.md
template-1.1/config-examples/: deploy-aws-amplify.yml  deploy-aws-ec2.yml  deploy-aws-ecs.yml  deploy-aws-s3.yml  deploy-custom.yml  (+5 more)
template-1.1/stacks/backend/python-fastapi/structure/backend/: .env.example  pyproject.toml  requirements.txt
template-1.1/stacks/backend/python-fastapi/structure/backend/alembic/: env.py
template-1.1/stacks/backend/python-fastapi/structure/backend/app/: config.py  database.py  main.py
template-1.1/stacks/backend/python-fastapi/structure/backend/app/api/: deps.py
template-1.1/stacks/backend/python-fastapi/structure/backend/app/api/v1/: router.py
template-1.1/stacks/backend/python-fastapi/structure/backend/app/models/: __init__.py
template-1.1/stacks/backend/python-fastapi/structure/backend/app/schemas/: __init__.py
template-1.1/stacks/backend/python-fastapi/structure/backend/app/services/: __init__.py
template-1.1/stacks/backend/python-fastapi/structure/backend/tests/: conftest.py
ud-escalator-project/: CLAUDE.md  README.md
(+182 files in other folders)
